@@ -65,6 +65,8 @@ production.
   its #test method when strings are used in the browser map: version '1.10' is
   now correctly considered larger than '1.2'. Using numbers in the version map
   is not affected.
+* Added a new ZeroMQFeedEngine for sending RC feeds via ZeroMQ (http://zeromq.org/).
+  Requires the ZeroMQ PHP extension from https://github.com/mkoppanen/php-zmq.
 
 === Bug fixes in 1.23 ===
 * (bug 41759) The "updated since last visit" markers (on history pages, recent
